--- a/Section 2/index.html
+++ b/Section 2/index.html
@@ -8,6 +8,7 @@
         <header>
             <h1>Learning javascript section 2</h1>
         </header>
-        <script src="js\test.js"></script>
+        <!--  <script src="js\test.js"></script> -->
+        <script src="js\timers.js"></script>
     </body>
 </html>
