--- a/Section 2/index.html
+++ b/Section 2/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Javascript Learning Section 2</title>
-    </head>
-    <body>
-        <header>
-            <h1>Learning javascript section 2</h1>
-        </header>
-        <!--  <script src="js\test.js"></script> -->
-        <script src="js\timers.js"></script>
-    </body>
-</html>
+<script src="js\basics.js"></script>
