--- a/Section 4/index.html
+++ b/Section 4/index.html
@@ -5,6 +5,6 @@
         <title></title>
     </head>
     <body>
-        <script src = 'js\strings.js'></script>
+        <script src = 'js\arrays.js'></script>
     </body>
 </html>
