Working with the Math object

--- a/Section 4/index.html
+++ b/Section 4/index.html
@@ -5,6 +5,6 @@
         <title></title>
     </head>
     <body>
-        <script src = 'js\dates.js'></script>
+        <script src = 'js\maths.js'></script>
     </body>
 </html>
