--- a/Section 5/index.html
+++ b/Section 5/index.html
@@ -9,6 +9,6 @@
             <h1 class="heading" id="mainHeading">Working with the DOM!</h1>
             <h2 class="heading subHeading">Part of the Front end development path!</h2>
         </header>
-        <script src = 'js\elements.js'></script>
+        <script src = 'js\events.js'></script>
     </body>
 </html>
