--- a/Section 6/index.html
+++ b/Section 6/index.html
@@ -9,10 +9,6 @@
             <h1 class="heading" id="mainHeading">Working with the DOM!</h1>
             <h2 class="heading subHeading">Part of the Front end development path!</h2>
         </header>
-        <header>
-            <h1 class="heading">Working with the DOM!</h1>
-            <h2 class="heading subHeading">Part of the Front end development path!</h2>
-        </header>
-        <script src = 'js\selectors.js'></script>
+        <script src = 'js\storage.js'></script>
     </body>
 </html>
