History API NOT WORKING

--- a/Section 6/index.html
+++ b/Section 6/index.html
@@ -9,6 +9,9 @@
             <h1 class="heading" id="mainHeading">Working with the DOM!</h1>
             <h2 class="heading subHeading">Part of the Front end development path!</h2>
         </header>
-        <script src = 'js\storage.js'></script>
+
+        <a href="history.html">History</a>
+
+        <!-- // <script src = 'js\history.js'></script> -->
     </body>
 </html>
